# musicplayerv2

./: .gitignore  .graphifyignore  CLAUDE.md  CMakeLists.txt  Dockerfile.qt6static  README.md  build.sh  clean_flac.py  clean_flac.sh  dev.sh  extract_metadata.py  lrcput.py  reload.sh  run_import.sh  style.qss
include/: bass_aac.h  bassflac.h  importer.h  library.h  lyrics.h
src/: importer.cpp  library.c  library.cpp  lyrics.c  lyrics.cpp  mainwindow.cpp  mainwindow.h
